Update with Java 21 (and with enable-preview)
Java:
 - JEP 430: String Templates ( STR."Hello \{name}" )
 - JEP 440: Record Patterns ( obj instanceof Point(var x, var y) )
 - JEP 441: Pattern Matching for switch
 - JEP 443: Unnamed Patterns and Variables ( _ )

Bot:
 - Add Chess 960 support
 - Use j.u.logging instead of System.out
 - Add OAuth2 PKCE flow (in addition to pre-created token option)
 - Client.store()/load() token with Preferences API
 - Support upgrading to BOT account